# MononobeMusic

./: .gitignore  README.md  pyproject.toml
example/netease/: search_artist.json  search_song.json  song_detail.json  song_detail_model.py  song_url.json
mononobe_api/: __init__.py
mononobe_api/local/: __init__.py
mononobe_api/netease/: __init__.py  api.py  schema.py
mononobe_cli/: __init__.py  play.py  search.py  show.py
mononobe_cli/utils/: __init__.py  termcolor.py
mononobe_core/: cache.py  consts.py  enums.py  exceptions.py  models.py  network.py
mononobe_core/player/: __init__.py  vlc_player.py
mononobe_music/: __init__.py
tests/: test_player.py
